# TP-PLP

./: .gitignore  .hlint.yaml  Demo.txt  Makefile  incierticalc.cabal
src/: App.hs  Expr.hs  Generador.hs  Histograma.hs  Util.hs
src/Expr/: Parser.hs
test/: Main.hs
